--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,1 +1,6 @@
-
+<div>
+    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate"> <input>
+    <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation" > <input>
+    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName" > <input>
+    <button ng-click>Submit</button>
+</div>
