--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let eventList of eventService.events">
+
+<!-- <div *ngFor="let eventList of eventService.events">
     
-</div>
+</div> -->
+<h1> I am a header</h1>
