--- a/src/app/bucketlist-page/bucketlist-page.component.html
+++ b/src/app/bucketlist-page/bucketlist-page.component.html
@@ -1,1 +1,4 @@
-<p>bucketlist-page works!</p>
+<h1>BucketList</h1>
+<!-- <app-bucketList *ngFor="let favorite of eventService.favorites" [favorite] = "favorite"></app-bucketList> -->
+<!-- need to add function to remove the item -->
+<!-- <button>Remove</button> -->
