--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,8 +1,4 @@
 <h1> I am a header</h1>
-<app-search-criteria *ngFor="let eventList of eventService.events" [eventList] = "event"></app-search-criteria>
+<!-- <app-search-criteria *ngFor="let eventList of eventService.events" [eventList] = "event">     </app-search-criteria> -->
+<div *ngFor="let event of eventService.events"> Hello, {{event.name}}    </div>
 
-<<<<<<< HEAD
-<h2></h2>
-=======
-<h2></h2>
->>>>>>> 972253df5f40d51396efd0891e1211a01b1afb75
