commit trying to figure out event-list html display not working

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,4 +1,4 @@
 <h1> I am a header</h1>
 <!-- <app-search-criteria *ngFor="let eventList of eventService.events" [eventList] = "event">     </app-search-criteria> -->
-<div *ngFor="let event of eventService.events"> Hello, {{event.name}}    </div>
+<div *ngFor="let event of eventService.lists"> Hello, {{event.name}}    </div>
 
