--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -4,6 +4,6 @@
     <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate"> <input>
     <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation" > <input>
     <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName" > <input>
-    <button (click)="gitFilteredResults()" [routerLink]="['/event-list']" >Submit</button> 
+    <button (click)="gitFilteredResults()" >Submit</button> 
     
 </div>
