favorites and bucketlist code

--- a/src/app/bucketlist-page/bucketlist-page.component.html
+++ b/src/app/bucketlist-page/bucketlist-page.component.html
@@ -1,4 +1,13 @@
-<h1>BucketList</h1>
-<!-- <app-bucketList *ngFor="let favorite of eventService.favorites" [favorite] = "favorite"></app-bucketList> -->
-<!-- need to add function to remove the item -->
-<!-- <button>Remove</button> -->
+
+<div *ngFor="let list of eventService.favorites; let myIndex=index">  
+
+    <li> Event: {{list.name}} </li> <button (click)="removeFavorite(myIndex)">❤</button>
+    <ul>
+         <img class="resize" [src] = "list.images" />
+         <li>Date: {{list.localDate}}</li>
+           
+        </ul>
+     
+
+     
+    
