--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,23 +1,16 @@
+
+<h1>I am a header</h1> 
+    
+
+    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate">  <input>
+    <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation">  <input>
+    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName"> <input>
+
+    <button (click)="gitFilteredResults()">Submit</button> 
+     
+
+
 <div>
-    
-    <h1></h1>
-<<<<<<< HEAD
-    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate">
-    <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation" >
-    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName" >
-=======
-    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate"> <input>
-    <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation" > <input>
-    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName" > <input>
-<<<<<<< HEAD
->>>>>>> 82f6d419e9845c5bc42a6c4d38152ee8d34c3ed4
-=======
->>>>>>> 82f6d419e9845c5bc42a6c4d38152ee8d34c3ed4
-    <button (click)="gitFilteredResults()" >Submit</button> 
-    
-</div>
-
-
     <ul class= "eventPost" *ngFor="let event of eventService.lists">
        <li> Event: {{ event.name }} </li> <button>❤</button>
        <ul>
