--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,31 +1,13 @@
 
-<h1>I am a header</h1> 
+<h1>Circus Code Events</h1> 
     
-
-    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate">  <input>
-    <input type = "text" placeholder="search location" name = "filterLocation" [(ngModel)]="filterLocation">  <input>
-    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName"> <input>
+<div class = searchFields>
+    <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate">
+    <input type = "text" placeholder="search by zipcode" name = "filterLocation" [(ngModel)]="filterLocation">
+    <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName">
 
     <button (click)="gitFilteredResults()">Submit</button> 
-     
+</div>
 
-
-<div>
-    <ul class= "eventPost" *ngFor="let event of eventService.lists">
-       <li> Event: {{ event.name }} </li> <button>❤</button>
-       <ul>
-            <img class="resize" [src] = "event.images" />
-            <li> <a href ="{{ event.url }}"> View full event details at Ticketmaster</a> </li>
-       </ul>
-       <div class = "moreInfo">
-           <button>More Info</button>
-           <ul>
-               <li>Date: {{ event.localDate }}</li>
-               <li>Time: {{ event.localTime }}</li>
-               <li>City/State: {{ event.city}}, {{ event.state }}</li>
-           </ul>
-           
-       </div>
-    </ul>
 
 
