--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,13 +1,31 @@
+<body>
+<div>
+    <h1>Circus Code Events</h1> 
 
-<h1>Circus Code Events</h1> 
+
+<div class = "container">
     
-<div class = searchFields>
+<div class = "searchFields">
     <input type="date" placeholder="search date" name="filterDate" [(ngModel)]="filterDate">
     <input type = "text" placeholder="search by zipcode" name = "filterLocation" [(ngModel)]="filterLocation">
     <input type ="text" placeholder="search name of event" name = "filterName" [(ngModel)]="filterName">
-
+<div class ="center-button">
     <button (click)="gitFilteredResults()">Submit</button> 
 </div>
+</div>
+</div>
+</div>
+
+</body>
+
+
+
+
+
+
+
+
+
 
 
 
