--- a/src/app/bucketlist-page/bucketlist-page.component.html
+++ b/src/app/bucketlist-page/bucketlist-page.component.html
@@ -1,5 +1,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/dkt5shm.css">  
 
 <div class="eventItem" *ngFor="let list of eventService.favorites; let myIndex=index">  
 
