--- a/src/app/event-list/event-list.component.css
+++ b/src/app/event-list/event-list.component.css
@@ -1,46 +1,75 @@
-.eventName{
-    font-size:20px;
-    text-decoration: overline #03A08D 3px;
+.eventName {
+    
+  font-size: 20px;
+  text-decoration: overline #03a08d 3px;
+  font-family: navigo, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  text-align: center;
+  
 }
 
-.resize{
-    max-width: 65%;
-    max-height: 65%;
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  margin-left: 100px;
+  
 }
 
-.eventItem{
-    /* border: 1px black solid; */
-    font-family: 'Rye', cursive;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    width: 600px;
-    border: 1px solid #A8D4D3;
-    box-shadow: 5px 10px #F48595;
-    border-radius: 3px;
+.resize {
+  max-width: 65%;
+  max-height: 65%;
 }
 
-.eventLink{
-    font-family: 'Times New Roman', Times, serif;
+.eventItem {
+  /* border: 1px black solid; */
+  font-family: "Rye", cursive;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  width: 600px;
+  border: 1px solid #a8d4d3;
+  box-shadow: 5px 10px #f48595;
+  border-radius: 3px;
 }
 
-button{
-    font-family: 'Rye', cursive;
-    border-radius: 3px;
-    margin: 2px;
-    border: 1px solid black;
-    font-size: 14px;
+.eventLink {
+  font-family: "Times New Roman", Times, serif;
+  margin-top: 25px;
+  margin-right: 150px;
+  display: flex;
+  justify-content: center;
 }
 
-.favorite{
-    color: #EF3F4A;
+button {
+  font-family: "Rye", cursive;
+  border-radius: 3px;
+  margin: 2px;
+  border: 1px solid black;
+  font-size: 14px;
 }
 
-ul{
-    list-style-type: none;
+.favorite {
+  color: #ef3f4a;
+}
+
+.favorite-button {
+  font-family: navigo, sans-serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.showInfo {
+  display: none;
+}
+
+.moreInfoButton {
+  font-family: navigo, sans-serif;
+  
 }
 
 
-.showInfo{
-    display:none;
-}
